# Gitwise

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ACCESS.md  EXECUTION_PIPELINE.md  GEMINI.md  README.md  ROADMAP.md  SECURITY.md
src/gitwise/: __init__.py  cli.py  help_text.py  models.py  output.py
src/gitwise/commands/: ask_cmd.py  diff_cmd.py  do_cmd.py  pull_cmd.py  whereami.py
src/gitwise/execution/: __init__.py  failures.py  pipeline.py  post_checks.py  pre_checks.py  runner.py  types.py
src/gitwise/llm/: __init__.py  config.py  context.py  diff_prompts.py  gemini.py  patch_context.py  prompts.py  response.py  sanitize.py  validator.py
src/gitwise/matching/: __init__.py  intent_parser.py  matcher.py  pull_resolver.py  push_resolver.py
src/gitwise/recipes/: README.md  SCHEMA.md  loader.py  planner.py  recipes.yaml  render.py  requires.py  validate_recipes.py
src/gitwise/repo/: __init__.py  git_runner.py  inspector.py  merge_state.py  probes.py
src/gitwise/workflows/: __init__.py  ask.py  diff_report.py  safe_pull.py  save.py  undo_last.py
tests/: test_ask.py  test_cli_help.py  test_diff_report.py  test_failures.py  test_inspector.py  test_intent_parser.py  test_matcher_planner.py  test_patch_context.py  test_pre_checks.py  test_pull_resolver.py  test_push_resolver.py  test_safe_pull.py  test_save.py  test_security.py  test_undo_last.py  test_whereami.py
tests/fixtures/: pull_conflict_demo.py
