[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitwise"
version = "0.1.0"
description = "Git workflow assistant — natural language to safe git commands"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "rapidfuzz>=3.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gw = "gitwise.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gitwise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
